Sat Oct 05 06:28:56 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* Makefile.am,README,docs/Makefile.am: SVN -> git.

Tue Apr 16 23:41:20 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.15.

Tue Apr 16 10:43:52 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Wed Mar 27 09:39:12 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* Makefile.am: Don't link utf8convert.cc code into omega CGI.

Thu Mar 14 22:43:50 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.14.

Thu Mar 14 12:34:29 GMT 2013  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* docs/overview.rst: Update to add com to the list of ignored
	  extensions.
	* omindex.cc: Ignore .com files by default.

Thu Mar 07 09:41:25 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sat Feb 16 08:20:36 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* xlsxparse.cc: Correct "max" -> "min" when reserving space for shared
	  strings.  This only means we now reserve a more appropriate amount
	  of space to start with.

Wed Jan 09 11:15:03 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.13.

Wed Jan 09 10:10:18 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Format new entries.

Tue Jan 08 11:09:38 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* commonhelp.cc: Tweak wording about default to match other options
	  better.

Tue Jan 08 10:58:58 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* omindex.cc: Note default size limit on files to index is unlimited.
	  Update --help to reflect that --sample-size now accepts the same
	  formats as --max-size).

Tue Jan 08 10:41:27 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* omindex.cc: When generating a sample for a CSV file, limit the